对接消息模块

--- a/src/style/BottomNavigation.module.scss
+++ b/src/style/BottomNavigation.module.scss
@@ -27,7 +27,7 @@
 
 .BottomNavigationTrue{
     color:#8BD1AE;
-    font-size: 0.9rem;
+    font-size: 28px;
     flex: 1;
     display: flex;
     align-items: center;
@@ -37,7 +37,7 @@
 
 .BottomNavigationFalse{
     color: gray;
-    font-size: 0.5rem;
+    font-size: 26px;
     flex: 1;
     display: flex;
     align-items: center;
