消息模块对接后端开发初步完成

--- a/src/style/Notice_List.module.scss
+++ b/src/style/Notice_List.module.scss
@@ -13,7 +13,21 @@
     height: 80px;
 }
 
-.itemImg{
+.list_red{
+    background-color: rgb(235, 41, 41);
+    color: white;
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    font-size: 20px;
+    text-align: center;
+    line-height: 30px;
+    position: relative;
+    right: 20px;
+    top: 5px;
+}
+
+.itemImg {
     width: 70px;
     height: 70px;
     border-radius: 100%;
@@ -25,12 +39,38 @@
     flex-wrap: nowrap;
     line-height: 40px;
     padding-left: 20px;
-    .list_title{
-        font-weight: bold;
-        font-size: 28px;
-    }
-    .list_message{
-        font-size: 24px;
-        color: gray;
-    }
+    flex: 1;
+    height: 80px;
+
+}
+.list_title {
+    font-weight: bold;
+    font-size: 28px;
+    width: 150px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    flex: 5;
+}
+.list_bottom {
+    width: 100%;
+    display: flex;
+    height: 40px;
+}
+
+.list_message {
+    font-size: 24px;
+    width: 150px;
+    color: gray;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    flex: 5;
+    padding-right: 35px;
+}
+.list_time{
+    flex: 3;
+    text-align: right;
+    overflow: hidden;
+    padding-right: 20px;
 }
