--- a/src/style/BottomNavigation.module.scss
+++ b/src/style/BottomNavigation.module.scss
@@ -4,7 +4,7 @@
     display: flex;
     bottom: 0;
     left: 0;
-    height: 3rem;
+    height: 100px;
     width: 100%;
     border-top-width: 1px;
     border-top-color: #e2e2e2;
