--- a/src/style/Chat.module.scss
+++ b/src/style/Chat.module.scss
@@ -1,12 +1,7 @@
 .chatTop {
-    height: 75px;
-    border-bottom: 1px solid rgb(230, 230, 230);
     display: flex;
     align-items: center;
     justify-content: center;
-    position: fixed;
-    top: 0;
-    background-color: white;
     width: 100%;
 }
 
@@ -18,7 +13,9 @@
 
 .headName {
     font-size: 30px;
+    padding-left: 20px;
     text-align: center;
+    letter-spacing:8px
 }
 
 .contain {
@@ -27,10 +24,23 @@
     height: 100%;
     overflow: hidden;
     overflow: -moz-scrollbars-none;
-    padding-top: 85px;
+    padding-top: 20px;
     padding-bottom: 100px;
     padding-left: 20px;
     padding-right: 20px;
+}
+
+.centerTip{
+    text-align: center;
+    background-color: #cccccc;
+    font-size: 24px;
+    color: white;
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 120px;
+    margin: 0 auto;
+    border-radius: 20px;
 }
 
 .chatBottom {
