--- a/src/style/Chat.module.scss
+++ b/src/style/Chat.module.scss
@@ -24,8 +24,8 @@
     height: 100%;
     overflow: hidden;
     overflow: -moz-scrollbars-none;
-    padding-top: 20px;
-    padding-bottom: 100px;
+    padding-top: 120px;
+    margin-bottom: 100px;
     padding-left: 20px;
     padding-right: 20px;
 }
