--- a/src/style/Notice_List.module.scss
+++ b/src/style/Notice_List.module.scss
@@ -74,3 +74,21 @@
     overflow: hidden;
     padding-right: 20px;
 }
+
+.noLogin1{
+    width: 100%;
+    text-align: center;
+    padding-top: 100px;
+    font-weight: bold;
+    color: #727d72;
+    font-size: 32px;
+}
+.noLogin2{
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+    color: #8BD1AE;
+    font-size: 34px;
+    font-style: italic;
+    text-decoration: underline;
+}
