--- a/src/style/TopBar.module.scss
+++ b/src/style/TopBar.module.scss
@@ -5,6 +5,9 @@
     color: white;
     padding-top: 10px;
     padding-bottom: 10px;
+    position: fixed;
+    width: 100%;
+    top: 0;
 }
 
 .TopBarLeftItem{
