--- a/src/style/BottomNavigation.module.scss
+++ b/src/style/BottomNavigation.module.scss
@@ -33,6 +33,7 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    position: relative;
 }
 
 .BottomNavigationFalse{
@@ -43,4 +44,20 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    position: relative;
+}
+
+.red{
+    background-color: rgb(235, 41, 41);
+    color: white;
+    width: 35px;
+    height: 30px;
+    border-radius: 100%;
+    font-size: 20px;
+    text-align: center;
+    line-height: 30px;
+    position: relative;
+    right: 20px;
+    top: 5px;
+    position: absolute;
 }
