--- a/src/view/my/MyHead.module.scss
+++ b/src/view/my/MyHead.module.scss
@@ -16,7 +16,8 @@
     overflow: hidden;
     position: relative;
     background: #8BD1AE;
-    background: -webkit-linear-gradient(#b8f3d5, #8BD1AE, #72c099);
+    background: -webkit-linear-gradient(#ffffff, #befcff, #9de8ff);
+    // background: -webkit-linear-gradient(#b8f3d5, #8BD1AE, #72c099);
     // /*  Safari 5.1 到 6.0 */
     // background: -o-linear-gradient(#DC1010, #90ED5A, #2F57E8);
     // /*  Opera 11.6 到 12.0 */
