--- a/src/view/home/Home.module.scss
+++ b/src/view/home/Home.module.scss
@@ -1,3 +1,23 @@
+.HomeCenterList{
+    font-size: 30px;
+}
+.HomeCenterUl{
+    margin-top: 10px;
+    display: flex;
+}
+
+.HomeCenterLi{
+    flex: 1;
+    display: inline-grid;
+    justify-content: center;
+    justify-items: center;
+}
+
+.HomeCenterImg{
+    width: 70px;
+    height: 70px;
+    margin-bottom: 5px;
+}
 .Home_center_2 {
     display: flex;
 }
