解决h5端报错、升级taro版本、降低weapp端打包体积

--- a/src/view/my/MyHead.module.scss
+++ b/src/view/my/MyHead.module.scss
@@ -50,7 +50,7 @@
 }
 
 .waveTop {
-    background-image: url('../../../public/images/bl_1.png');
+    background-image: url('https://gykxytimage.oss-cn-heyuan.aliyuncs.com/gyk/public/images/bl_1.png');
     background-size: 50% 30px;
 }
 
@@ -62,7 +62,7 @@
 }
 
 .waveMiddle {
-    background-image: url('../../../public/images/bl_2.png');
+    background-image: url('https://gykxytimage.oss-cn-heyuan.aliyuncs.com/gyk/public/images/bl_2.png');
     background-size: 50% 40px;
 }
 
