--- a/src/view/home/Home.module.scss
+++ b/src/view/home/Home.module.scss
@@ -108,3 +108,22 @@
     font-weight: bolder;
     text-align: center;
 }
+.searchImg{
+    width: 35px;
+    height: 35px;
+    padding-left: 5px;
+    padding-right: 10px;
+}
+
+.search{
+    display: flex;
+    align-items: center;
+    border: 1px solid rgb(243, 243, 243);
+    border-radius: 30px;
+    background-color: rgb(250, 250, 250);
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 20px;
+    color: gainsboro;
+}
