--- a/src/app.scss
+++ b/src/app.scss
@@ -2,3 +2,11 @@
 .van-tabs__line{
     background-color:#8BD1AE !important
 }
+
+//取消滚动条
+// ::-webkit-scrollbar {
+//     display: none;
+//     width: 0;
+//     height: 0;
+//     color: transparent
+// }
