--- a/src/view/articledetail/ArticleDetail.module.scss
+++ b/src/view/articledetail/ArticleDetail.module.scss
@@ -44,8 +44,9 @@
     height: 50px;
     line-height: 50px;
     text-align: center;
-    background-color: rgb(248, 245, 77);
+    background-color: #8BD1AE;
     justify-content: center;
+    color: white;
 }
 
 .message {
@@ -63,6 +64,7 @@
     gap: 30px;
     padding-left: 25px;
     padding-right: 25px;
+    align-items: center;
 }
 
 .item {
@@ -81,4 +83,8 @@
     font-weight: bold;
     padding-left: 25px;
     padding-right: 25px;
+}
+
+.itemsDiv{
+    display: flex;
 }
