--- a/src/view/login/Login.module.scss
+++ b/src/view/login/Login.module.scss
@@ -65,6 +65,7 @@
     margin-left: 50px;
     margin-right: 50px;
     margin-top: 40px;
+    display: flex;
     color: white;
 }
 .registerButton{
