--- a/src/view/push/Push.module.scss
+++ b/src/view/push/Push.module.scss
@@ -24,3 +24,15 @@
     display: flex;
     margin-right: 20px;
 }
+.loginButton{
+    background-color: #8BD1AE;
+    height: 65px;
+    text-align: center;
+    line-height: 65px;
+    border-radius: 40px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-top: 40px;
+    display: flex;
+    color: white;
+}
