--- a/src/view/articledetail/ArticleDetail.module.scss
+++ b/src/view/articledetail/ArticleDetail.module.scss
@@ -57,7 +57,13 @@
 .context {
     font-size: 28px;
 }
-
+.title {
+    color: #323232;
+    font-family: cursive;
+    font-size: 32px;
+    font-weight: bold;
+    padding-bottom: 15px;
+}
 .items {
     height: 100px;
     display: flex;
@@ -87,4 +93,21 @@
 
 .itemsDiv{
     display: flex;
+}
+
+.imageThreeDiv {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.mask2 {
+    width: 30%;
+    height: 200px;
+    padding: 5px;
+    position: relative;
+}
+
+.maskImg {
+    width: 100%;
+    height: 100%;
 }
