增加粉丝和关注,修复一些问题

--- a/src/view/followandfans/FollowAndFans.module.scss
+++ b/src/view/followandfans/FollowAndFans.module.scss
@@ -41,7 +41,6 @@
 }
 
 .right{
-    flex: 1;
     min-width: 100px;
     min-height: 60px;
     display: flex;
@@ -53,4 +52,12 @@
     border-radius: 30px;
     font-size: 28px;
     text-align: center;
+}
+.rightButtonCancel{
+    width: 100%;
+    border: 2px solid gray;
+    border-radius: 30px;
+    font-size: 28px;
+    text-align: center;
+    color: red;
 }
