--- a/src/view/interaction/InteractionLoadMore.module..scss
+++ b/src/view/interaction/InteractionLoadMore.module..scss
@@ -14,6 +14,7 @@
     width: 70px;
     height: 70px;
     border-radius: 100%;
+    background-color: lightgray;
 }
 .leftMinImg{
     width: 35px;
