--- a/src/component/ariticle/CommentLoadMore.module.scss
+++ b/src/component/ariticle/CommentLoadMore.module.scss
@@ -1,4 +1,3 @@
-
 .mainComment, .subComment {
     display: flex;
     flex-direction: row;
@@ -15,6 +14,7 @@
     height: 60px;
     border-radius: 50%;
     margin-top: 5px;
+    background-color: lightgray;
 }
 
 .others {
