解决h5图片上传、input样式以及其它适配问题

--- a/src/subPack1/personalSetting/PersonalSetting.module.scss
+++ b/src/subPack1/personalSetting/PersonalSetting.module.scss
@@ -75,6 +75,9 @@
     padding-left: 20px;
     padding-right: 20px;
     text-align: center;
+    width: 90%;
+    border: none !important;	 
+    outline:none !important;
 }
 
 .loginButton {
