--- a/src/view/chat/Chat.module.scss
+++ b/src/view/chat/Chat.module.scss
@@ -78,6 +78,9 @@
     height: fit-content;
     justify-content: center;
     align-items: center;
+    border: none !important;	 
+    outline:none !important;
+    background-color: rgb(240, 240, 240);
 }
 
 .bottomLeft {
