--- a/src/view/legwork/LegWork.module.scss
+++ b/src/view/legwork/LegWork.module.scss
@@ -68,6 +68,8 @@
     padding: 10px;
     padding-left: 20px;
     width: 100%;
+    border: none !important;	 
+    outline:none !important;
 }
 .line{
     background-color: #f8f8f8;
