--- a/src/view/push/Push_textarea.module.scss
+++ b/src/view/push/Push_textarea.module.scss
@@ -12,6 +12,8 @@
     padding: 20px;
     padding-bottom: 50px;
     width: 100%;
+    border: none !important;	 
+    outline:none !important;
 }
 .textCount{
     position: absolute;
@@ -33,6 +35,8 @@
     background-color: rgb(245, 245, 245);
     padding: 20px;
     width: 100%;
+    border: none !important;	 
+    outline:none !important;
 }
 .inputCount{
     position: absolute;
