--- a/src/component/ariticle/CommentLoadMore.module.scss
+++ b/src/component/ariticle/CommentLoadMore.module.scss
@@ -120,6 +120,9 @@
     height: fit-content;
     justify-content: center;
     align-items: center;
+    border: none !important;	 
+    outline:none !important;
+    background-color: rgb(240, 240, 240);
 }
 
 .bottomLeft {
