--- a/src/view/login/Login.module.scss
+++ b/src/view/login/Login.module.scss
@@ -20,6 +20,10 @@
     line-height: 50px;
     font-family: fangsong;
 }
+.loginInput{
+    border: none !important;	 
+    outline:none !important;
+}
 .loginTopText2{
     font-size: 34px;
     color: white;
